Fix assertion problem

--- a/switch.html
+++ b/switch.html
@@ -14,7 +14,7 @@
         <img src="./loading.gif" alt="" style="border-radius: 16px;">
     </main>
     <script type="module">
-        import URLS from './data/urls.json' assert { type: "json" };
+        import URLS from './data/urls.js';
 
         //Get query params from URL
         const searchParams = new URLSearchParams(window.location.search);
